use of locators type id, class, name, linked text, partial linked text, css selector, pageLoadTimeOut(), implicitlyWait()

--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>lec20_java_selenium_methods.A04_another_way_how_to_show_the_location_of_driver</td>
+<td>lec21_java_selenium_methods.B14_use_of_click_method_by_cssSelector_locator_not_common_way_03</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>urlTest</td>
+<td>loginButtonTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
