--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7e99d8">  <td>22/06/21 22:37:33</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;A04_another_way_how_to_show_the_location_of_driver.tearUp()[pri:0, instance:lec20_java_selenium_methods.A04_another_way_how_to_show_the_location_of_driver@5d7148e2]">&lt;&lt;tearUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@504053874</td>   <td></td> </tr>
-<tr bgcolor="7e99d8">  <td>22/06/21 22:37:26</td>   <td>-7606</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="A04_another_way_how_to_show_the_location_of_driver.urlTest()[pri:0, instance:lec20_java_selenium_methods.A04_another_way_how_to_show_the_location_of_driver@5d7148e2]">urlTest</td> 
-  <td>main@504053874</td>   <td></td> </tr>
-<tr bgcolor="7e99d8">  <td>22/06/21 22:37:24</td>   <td>-9170</td> <td>&nbsp;</td><td title="&gt;&gt;A04_another_way_how_to_show_the_location_of_driver.setUp()[pri:0, instance:lec20_java_selenium_methods.A04_another_way_how_to_show_the_location_of_driver@5d7148e2]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@504053874</td>   <td></td> </tr>
+<tr bgcolor="a6b398">  <td>22/06/24 21:57:38</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;B14_use_of_click_method_by_cssSelector_locator_not_common_way_03.tearUp()[pri:0, instance:lec21_java_selenium_methods.B14_use_of_click_method_by_cssSelector_locator_not_common_way_03@4803b726]">&lt;&lt;tearUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="a6b398">  <td>22/06/24 21:57:33</td>   <td>-5068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="B14_use_of_click_method_by_cssSelector_locator_not_common_way_03.loginButtonTest()[pri:0, instance:lec21_java_selenium_methods.B14_use_of_click_method_by_cssSelector_locator_not_common_way_03@4803b726]">loginButtonTest</td> 
+  <td>main@517254671</td>   <td></td> </tr>
+<tr bgcolor="a6b398">  <td>22/06/24 21:57:25</td>   <td>-12886</td> <td>&nbsp;</td><td title="&gt;&gt;B14_use_of_click_method_by_cssSelector_locator_not_common_way_03.setUp()[pri:0, instance:lec21_java_selenium_methods.B14_use_of_click_method_by_cssSelector_locator_not_common_way_03@4803b726]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@517254671</td>   <td></td> </tr>
 </table>
