isDisplayed(), isEnabled(), isSelected(), getTitle(), getCurrentUrl(), getText(), getAttribute(), sendKeys(), navigate().to(), navigate().back(), navigate().forward(), navigate().refresh(), Keys.ENTER, Use of Firefox driver.

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,059</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19,043</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">lec21_java_selenium_methods.B14_use_of_click_method_by_cssSelector_locator_not_common_way_03</td><td><a href="#m0">loginButtonTest</a></td><td rowspan="1">1656122253763</td><td rowspan="1">5066</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">lec22_java_selenium_methods.C14_use_of_gecko_or_firefox_driver</td><td><a href="#m0">searchingProductsTest</a></td><td rowspan="1">1656296786734</td><td rowspan="1">12407</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">lec21_java_selenium_methods.B14_use_of_click_method_by_cssSelector_locator_not_common_way_03#loginButtonTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">lec22_java_selenium_methods.C14_use_of_gecko_or_firefox_driver#searchingProductsTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
