--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>lec21_java_selenium_methods.B14_use_of_click_method_by_cssSelector_locator_not_common_way_03</td>
+<td>lec22_java_selenium_methods.C14_use_of_gecko_or_firefox_driver</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginButtonTest</td>
+<td>searchingProductsTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
